--- a/app/src/main/res/values-ru/strings_alarms.xml
+++ b/app/src/main/res/values-ru/strings_alarms.xml
@@ -8,6 +8,7 @@
     <string name="alarm_type_progress">Печать</string>
     <string name="alarm_type_temperature_hot_end">Температура хотэнда</string>
     <string name="alarm_type_temperature_hot_bed">Температура стола</string>
+    <string name="alarm_type_temperature_chamber">Температура камеры</string>
     <string name="alarm_type_gcode_command">Выполнение команды GCODE</string>
     <string name="alarm_type_z_height">Высота Z</string>
 
@@ -18,6 +19,7 @@
     <string name="alarm_setting_value_progress">Предупредить когда печать закончится на (%)</string>
     <string name="alarm_setting_value_temperature_hot_end">Предупредить когда хотэнд нагреется до температуры (°)</string>
     <string name="alarm_setting_value_temperature_hot_bed">Предупредить когда стол нагреется до температуры (°)</string>
+    <string name="alarm_setting_value_temperature_chamber">Предупредить когда камеры нагреется до температуры (°)</string>
     <string name="alarm_setting_value_gcode_command">Предупредить при выполнении этой команды GCODE</string>
     <string name="alarm_setting_value_z_height">Предупредить когда сопло достигнет этой высоты (mm)</string>
     <string name="alarm_settins_value">Значение</string>
@@ -49,6 +51,7 @@
     <string name="alarm_notification_progress">Прогрессия печати: %.1f%%</string>
     <string name="alarm_notification_temperature_hot_end">Температура хотэнда. %1$d: %2$.1f°</string>
     <string name="alarm_notification_temperature_hot_bed">Температура стола: %.1f°</string>
+    <string name="alarm_notification_temperature_hot_chamber">Температура камеры: %.1f°</string>
     <string name="alarm_notification_gcode_command">Выполняется команда GCODE: %s</string>
     <string name="alarm_notification_z_height">Достигнута высота Z: %.2f</string>
 
