--- a/app/src/main/res/values-de/strings_alarms.xml
+++ b/app/src/main/res/values-de/strings_alarms.xml
@@ -6,8 +6,9 @@
     <string name="alarms_title">Verwalten von Benachrichtigungen</string>
 
     <string name="alarm_type_progress">Druckprogression</string>
-    <string name="alarm_type_temperature_hot_end">Heizkopftemperatur</string>
-    <string name="alarm_type_temperature_hot_bed">Heizung Betttemperatur</string>
+    <string name="alarm_type_temperature_hot_end">Heizkopf-Temperatur</string>
+    <string name="alarm_type_temperature_hot_bed">Heizung Bett-Temperatur</string>
+    <string name="alarm_type_temperature_chamber">Heizung Kammer-Temperatur</string>
     <string name="alarm_type_gcode_command">GCODE Befehlsausführung</string>
     <string name="alarm_type_z_height">Z Höhe</string>
 
@@ -18,6 +19,7 @@
     <string name="alarm_setting_value_progress">Warnung, wenn der Job diesen Fortschritt erreicht hat (%)</string>
     <string name="alarm_setting_value_temperature_hot_end">Warnung wenn heißes Ende diese Temperatur erreicht (°)</string>
     <string name="alarm_setting_value_temperature_hot_bed">Warnung wenn das heiße Bett diese Temperatur erreicht (°)</string>
+    <string name="alarm_setting_value_temperature_chamber">Warnung wenn das heiße Kammer diese Temperatur erreicht (°)</string>
     <string name="alarm_setting_value_gcode_command">Warnung wenn dieser GCODE-Befehl ausgeführt wird</string>
     <string name="alarm_setting_value_z_height">Alarm, wenn die Düse diese Höhe erreicht (mm)</string>
     <string name="alarm_settins_value">Alarmwert</string>
@@ -48,7 +50,8 @@
     <string name="alarm_notification_title">Warnungen: %s</string>
     <string name="alarm_notification_progress">Aktueller Fortschritt: %.1f%%</string>
     <string name="alarm_notification_temperature_hot_end">Temperatur des Extruders. %1$d: %2$.1f°</string>
-    <string name="alarm_notification_temperature_hot_bed">Beheizte Betttemperatur: %.1f°</string>
+    <string name="alarm_notification_temperature_hot_bed">Beheizte Bett-Temperatur: %.1f°</string>
+    <string name="alarm_notification_temperature_hot_chamber">Beheizte Kammer-Temperatur: %.1f°</string>
     <string name="alarm_notification_gcode_command">GCODE-Befehl ausgeführt: %s</string>
     <string name="alarm_notification_z_height">Z-Höhe erreicht: %.2f</string>
 
