--- a/app/src/main/res/values-nl/strings_alarms.xml
+++ b/app/src/main/res/values-nl/strings_alarms.xml
@@ -8,6 +8,7 @@
     <string name="alarm_type_progress">Print voortgang</string>
     <string name="alarm_type_temperature_hot_end">Temperatuur head</string>
     <string name="alarm_type_temperature_hot_bed">Temperatuur bed</string>
+    <string name="alarm_type_temperature_chamber">Temperatuur kamer</string>
     <string name="alarm_type_gcode_command">GCODE commando uitvoering</string>
     <string name="alarm_type_z_height">Z hoogte</string>
 
@@ -18,6 +19,7 @@
     <string name="alarm_setting_value_progress">Melding wanneer dee voortgang bereikt wordt (%)</string>
     <string name="alarm_setting_value_temperature_hot_end">Melding bij deze temperatuur van de kop (°)</string>
     <string name="alarm_setting_value_temperature_hot_bed">Melding bij deze temperatuur van het bed (°)</string>
+    <string name="alarm_setting_value_temperature_chamber">Melding bij deze temperatuur van het kamer (°)</string>
     <string name="alarm_setting_value_gcode_command">Melding bij executie van dit GCODE commando</string>
     <string name="alarm_setting_value_z_height">Melding bij bereiken deze hoogte (mm)</string>
     <string name="alarm_settins_value">Alarmering waarde</string>
@@ -50,6 +52,7 @@
     <string name="alarm_notification_progress">Voortgang tot nu toe: %.1f%%</string>
     <string name="alarm_notification_temperature_hot_end">Temperatuur van extr. %1$d: %2$.1f°</string>
     <string name="alarm_notification_temperature_hot_bed">Temperatuur van bed: %.1f°</string>
+    <string name="alarm_notification_temperature_hot_chamber">Temperatuur van kamer: %.1f°</string>
     <string name="alarm_notification_gcode_command">GCODE commando: %s</string>
     <string name="alarm_notification_z_height">Z-Hoogte bereikt: %.2f</string>
 
