[DEV] Integrate page dedicated to WemoSwitch plugin

--- a/app/src/main/res/values-de/strings_plugins.xml
+++ b/app/src/main/res/values-de/strings_plugins.xml
@@ -8,12 +8,14 @@
     <string name="plugin_desc_psu">Dieses OctoPrint-Plugin steuert ein ATX/AUX-Netzteil, um den Stromverbrauch und das Rauschen zu reduzieren, wenn der Drucker nicht verwendet wird.</string>
     <string name="plugin_desc_autoshutdown">Plugin zum automatischen Herunterfahren des Systems nach Abschluss des Druckvorgangs. Kann nur konfiguriert werden, wenn der Server in Betrieb ist.</string>
     <string name="plugin_desc_tp_link">Dieses Plugin ist von OctoPrint-PSUControl und dem TP-Link WiFi SmartPlug Client inspiriert und steuert einen TP-Link Smartplug über die OctoPrint-Navigationsleiste.</string>
+    <string name="plugin_desc_wemo">Dieses Plugin ermöglicht die Steuerung von Belkin Wemo-Geräten über Navigationsschaltflächen und Gcode-Befehle.</string>
     <string name="plugin_desc_enclosure">Steuern Sie so ziemlich alles, was Sie mit Ihrem Raspberry Pi/OctoPrint/Enclosure tun möchten.</string>
     <string name="plugin_desc_navbartemp">Anzeige der Temperaturen in der Navigationsleiste von OctoPrint. Für Raspberry Pi-Benutzer kann dieses Plugin die CPU-Temperatur des Raspberry Pi automatisch in der Titelleiste der App anzeigen.</string>
     <string name="plugin_desc_octolapse">Octolapse wurde entwickelt, um stabilisierte Zeitraffer Ihrer Drucke mit so wenig Aufwand wie möglich zu gestalten, und es ist äußerst konfigurierbar. Jetzt können Sie eine seidige, glatte Timelapse ohne eine benutzerdefinierte Kamerahalterung erstellen. Es sind keine GCode-Anpassungen erforderlich.</string>
 
     <string name="plugin_message_psu">Das PSU-Control-Plugin muss auf Ihrem OctoPrint-Server installiert sein. Dann erscheint es automatisch im linken Menü der App.</string>
     <string name="plugin_message_tp_link">Der TP-Link SmartPlug sollte auf Ihrem OctoPrint-Server installiert sein. Dann erscheint es automatisch im linken Menü der App.</string>
+    <string name="plugin_message_wemo">Der WemoSwitch sollte auf Ihrem OctoPrint-Server installiert sein. Dann erscheint es automatisch im linken Menü der App.</string>
     <string name="plugin_message_enclosure">Dieses Plugin wird in Kürze in Printoid integriert, bitte haben Sie etwas Geduld :) Sie werden informiert, sobald es verfügbar ist.</string>
     <string name="plugin_message_navbartemp">Das Navbar Temp-Plugin sollte auf Ihrem OctoPrint-Server installiert sein.\n\nWenn Sie einen Raspberry Pi verwenden, wird seine CPU-Temperatur automatisch in der Titelleiste der App angezeigt.</string>
 
@@ -30,6 +32,11 @@
     <string name="plugin_tplink_enable">Aktivieren Sie TP-Link SmartPlug</string>
     <string name="plugin_tplink_state">Aktuellen Zustand:</string>
     <string name="plugin_tplink_ip">Smartplug IP:</string>
+
+    <!-- WEMO SWITCH PLUGIN -->
+    <string name="plugin_wemo_enable">Aktivieren Sie WemoSwitch</string>
+    <string name="plugin_wemo_state">Aktuellen Zustand:</string>
+    <string name="plugin_wemo_ip">WemoSwitch IP:</string>
 
     <string name="plugin_navbartemp_temperature">System-SoC-Temperatur</string>
     
