--- a/app/src/main/res/values-it/strings_plugins.xml
+++ b/app/src/main/res/values-it/strings_plugins.xml
@@ -9,12 +9,14 @@
     <string name="plugin_desc_psu">Questo plugin OctoPrint controlla un alimentatore ATX / AUX per ridurre il consumo energetico e il rumore quando la stampante non è in uso.</string>
     <string name="plugin_desc_autoshutdown">Plugin per lo spegnimento automatico del sistema al termine della stampa. Può essere configurato solo quando il server è attivo.</string>
     <string name="plugin_desc_tp_link">Lavoro ispirato a OctoPrint-PSUControl e TP-Link WiFi SmartPlug Client, questo plugin controlla uno Smartplug TP-Link tramite la barra di navigazione di OctoPrint.</string>
+    <string name="plugin_desc_wemo">Questo plugin consente il controllo dei dispositivi Belkin Wemo tramite i pulsanti della barra di navigazione e i comandi gcode.</string>
     <string name="plugin_desc_enclosure">Controlla praticamente tutto ciò che potresti voler fare sul tuo Raspberry Pi/OctoPrint/Enclosure.</string>
     <string name="plugin_desc_navbartemp">Visualizza le temperature sulla barra di navigazione di OctoPrint. Per gli utenti Raspberry Pi, questo plugin consente di mostrare automaticamente la temperatura della CPU del Raspberry Pi nella barra del titolo dell\'app.</string>
     <string name="plugin_desc_octolapse">Octolapse è progettato per rendere i timelapse stabilizzati delle tue stampe con il minor dispendio possibile ed è estremamente configurabile. Ora è possibile creare un timelapse liscio come la seta senza l\'installazione  di una telecamera personalizzata, senza la necessità di Gcode personalizzati.</string>
 
     <string name="plugin_message_psu">Il plugin di controllo PSU deve essere installato sul server OctoPrint. Quindi apparirà automaticamente nel menu di sinistra dell\'app.</string>
     <string name="plugin_message_tp_link">TP-Link SmartPlug deve essere installato sul server OctoPrint. Quindi apparirà automaticamente nel menu di sinistra dell\'app.</string>
+    <string name="plugin_message_wemo">WemoSwitch deve essere installato sul server OctoPrint. Quindi apparirà automaticamente nel menu di sinistra dell\'app.</string>
     <string name="plugin_message_enclosure">Questo plugin verrà integrato molto presto in Printoid, per favore sii paziente :) Sarai informato una volta disponibile.</string>
     <string name="plugin_message_navbartemp">Il plug-in Temp Navbar dovrebbe essere installato sul server OctoPrint.\n\nuando si utilizza un Raspberry Pi, la relativa temperatura della CPU verrà visualizzata automaticamente nella barra del titolo dell\'app.</string>
 
@@ -34,6 +36,11 @@
     <string name="plugin_tplink_enable">Abilita TP-Link SmartPlug</string>
     <string name="plugin_tplink_state">Stato Corrente:</string>
     <string name="plugin_tplink_ip">Smartplug IP:</string>
+
+    <!-- WEMO SWITCH PLUGIN -->
+    <string name="plugin_wemo_enable">Abilita WemoSwitch</string>
+    <string name="plugin_wemo_state">Stato Corrente:</string>
+    <string name="plugin_wemo_ip">WemoSwitch IP:</string>
 
     <!-- NAVBARTEMP PLUGIN -->
     <string name="plugin_navbartemp_temperature">Temperatura Sistema SoC</string>
