--- a/app/src/main/res/values-pt/strings_plugins.xml
+++ b/app/src/main/res/values-pt/strings_plugins.xml
@@ -9,12 +9,14 @@
     <string name="plugin_desc_psu">Este plugin OctoPrint controla uma fonte de alimentação ATX / AUX para ajudar a reduzir o consumo de energia e o ruído quando a impressora não estiver em uso.</string>
     <string name="plugin_desc_autoshutdown">Plugin para desligar automaticamente o sistema após a conclusão da impressão. Pode ser configurado apenas quando o servidor está ativo.</string>
     <string name="plugin_desc_tp_link">Inspirado no OctoPrint-PSU Control e no SmartPlug Client TP-Link WiFi, este plugin controla um SmartLink TP-Link através da barra de navegação do OctoPrint.</string>
+    <string name="plugin_desc_wemo">Este plugin permite o controle dos dispositivos Belkin Wemo através de botões de navegação e comandos gcode.</string>
     <string name="plugin_desc_enclosure">Controle praticamente tudo o que você desejar fazer no seu Raspberry Pi, OctoPrint e plugin Enclosure.</string>
     <string name="plugin_desc_navbartemp">Exiba temperaturas na barra de navegação do OctoPrint. Para usuários de Raspberry Pi, este plugin permite mostrar automaticamente a temperatura da CPU do Raspberry Pi na barra de título do aplicativo.</string>
     <string name="plugin_desc_octolapse">O Octolapse foi projetado para criar timelapses estabilizadas de suas impressões com o menor incômodo possível, e é extremamente configurável. Agora você pode criar um timelapse suave e sedoso sem uma montagem de câmera personalizada, sem necessidade de personalizações de GCode.</string>
 
     <string name="plugin_message_psu">O plug-in PSU Control deve ser instalado no seu servidor OctoPrint. Desta forma ele aparecerá automaticamente no menu à esquerda do app.</string>
     <string name="plugin_message_tp_link">O plugin TP-Link SmartPlug deve ser instalado no seu servidor OctoPrint. Desta forma ele aparecerá automaticamente no menu à esquerda do aplicativo.</string>
+    <string name="plugin_message_wemo">O plugin WemoSwitch deve ser instalado no seu servidor OctoPrint. Desta forma ele aparecerá automaticamente no menu à esquerda do aplicativo.</string>
     <string name="plugin_message_enclosure">Este plugin será integrado muito em breve no Printoid :) Seja paciente, você será informado quando ficar disponível</string>
     <string name="plugin_message_navbartemp">O plugin Navbar Temp deve ser instalado no seu servidor OctoPrint.\n\nAssim, se você estiver usando um Raspberry Pi, a temperatura da CPU aparecerá automaticamente na barra de título do app.</string>
 
@@ -35,6 +37,11 @@
     <string name="plugin_tplink_enable">Ativar TP-Link SmartPlug</string>
     <string name="plugin_tplink_state">Estado atual:</string>
     <string name="plugin_tplink_ip">Smartplug IP:</string>
+
+    <!-- WEMO SWITCH PLUGIN -->
+    <string name="plugin_wemo_enable">Ativar WemoSwitch</string>
+    <string name="plugin_wemo_state">Estado atual:</string>
+    <string name="plugin_wemo_ip">WemoSwitch IP:</string>
 
     <!-- NAVBARTEMP PLUGIN -->
     <string name="plugin_navbartemp_temperature">Temperatura da CPU do sistema</string>
