--- a/app/src/main/res/values/strings_plugins.xml
+++ b/app/src/main/res/values/strings_plugins.xml
@@ -9,6 +9,7 @@
     <string name="plugin_name_psu" translatable="false">PSU Control</string>
     <string name="plugin_name_autoshutdown" translatable="false">Automatic Shutdown</string>
     <string name="plugin_name_tp_link" translatable="false">TP-Link SmartPlug</string>
+    <string name="plugin_name_wemo" translatable="false">WemoSwitch</string>
     <string name="plugin_name_enclosure" translatable="false">OctoPrint Enclosure</string>
     <string name="plugin_name_navbartemp" translatable="false">Navbar Temp</string>
     <string name="plugin_name_octolapse" translatable="false">Octolapse</string>
@@ -16,6 +17,7 @@
     <string name="plugin_desc_psu">This OctoPrint plugin controls an ATX/AUX power supply to help reduce power consumption and noise when the printer is not in use.</string>
     <string name="plugin_desc_autoshutdown">Plugin for automatically shutting down the system after print is finished. Can be configured only when the server is up.</string>
     <string name="plugin_desc_tp_link">Work inspired by OctoPrint-PSUControl and TP-Link WiFi SmartPlug Client, this plugin controls a TP-Link Smartplug via OctoPrint\'s nav bar.</string>
+    <string name="plugin_desc_wemo">This plugin allows for the control of Belkin Wemo devices via navbar buttons and gcode commands.</string>
     <string name="plugin_desc_enclosure">Control pretty much everything that you might want to do on your Raspberry Pi/OctoPrint/Enclosure.</string>
     <string name="plugin_desc_navbartemp">Display temperatures on OctoPrint\'s navigation bar. For Raspberry Pi users, this plugin allows to show the Raspberry Pi\'s CPU temperature in the app title bar automatically.</string>
     <string name="plugin_desc_octolapse">Octolapse is designed to make stabilized timelapses of your prints with as little hassle as possible, and it\'s extremely configurable. Now you can create a silky smooth timelapse without a custom camera mount, no GCode customizations required.</string>
@@ -23,6 +25,7 @@
     <string name="plugin_author_psu" translatable="false">Shawn Bruce (@kantlivelong)</string>
     <string name="plugin_author_autoshutdown" translatable="false">Nicanor Romero Venier(@octoprint)</string>
     <string name="plugin_author_tp_link" translatable="false">(@jneilliii)</string>
+    <string name="plugin_author_wemo" translatable="false">(@jneilliii)</string>
     <string name="plugin_author_enclosure" translatable="false">Vitor de M. Henrique (@vitormhenrique)</string>
     <string name="plugin_author_navbartemp" translatable="false">Jarek Szczepanski (@imrahil)</string>
     <string name="plugin_author_octolapse" translatable="false">Brad Hochgesang (@FormerLurker)</string>
@@ -30,14 +33,16 @@
     <string name="plugin_url_psu" translatable="false">https://github.com/kantlivelong/OctoPrint-PSUControl</string>
     <string name="plugin_url_autoshutdown" translatable="false">https://github.com/OctoPrint/OctoPrint-AutomaticShutdown</string>
     <string name="plugin_url_tp_link" translatable="false">https://github.com/jneilliii/OctoPrint-TPLinkSmartplug</string>
+    <string name="plugin_url_wemo" translatable="false">https://github.com/jneilliii/OctoPrint-WemoSwitch</string>
     <string name="plugin_url_enclosure" translatable="false">https://github.com/vitormhenrique/OctoPrint-Enclosure</string>
     <string name="plugin_url_navbartemp" translatable="false">https://github.com/imrahil/OctoPrint-NavbarTemp</string>
     <string name="plugin_url_octolapse" translatable="false">https://github.com/FormerLurker/Octolapse</string>
 
     <string name="plugin_message_psu">The PSU Control plugin shall be installed on your OctoPrint server. Then it will automatically appear in the left menu of the app.</string>
-    <string name="plugin_message_tp_link">The TP-Link SmartPlug shall should be installed on your OctoPrint server. Then it will automatically appear in the left menu of the app.</string>
+    <string name="plugin_message_tp_link">The TP-Link SmartPlug shall be installed on your OctoPrint server. Then it will automatically appear in the left menu of the app.</string>
+    <string name="plugin_message_wemo">The WemoSwitch plugin shall be installed on your OctoPrint server. Then it will automatically appear in the left menu of the app.</string>
     <string name="plugin_message_enclosure">This plugin will be integrated very soon in Printoid, please be patient :) You will be informed once available.</string>
-    <string name="plugin_message_navbartemp">The Navbar Temp plugin should be installed on your OctoPrint server.\n\nThen if you are using a Raspberry Pi, its CPU temperature will appear automatically in the app\'s title bar.</string>
+    <string name="plugin_message_navbartemp">The Navbar Temp plugin shall be installed on your OctoPrint server.\n\nThen if you are using a Raspberry Pi, its CPU temperature will appear automatically in the app\'s title bar.</string>
     <string name="plugin_message_octolapse" translatable="false">none</string>
 
     <string name="plugin_not_available">This plugin seems not available (or not installed on your OctoPrint server). Please check its status on your OctoPrint server\'s settings.</string>
@@ -56,6 +61,11 @@
     <string name="plugin_tplink_enable">Enable TP-Link SmartPlug</string>
     <string name="plugin_tplink_state">Current state:</string>
     <string name="plugin_tplink_ip">Smartplug IP:</string>
+
+    <!-- WEMO SWITCH PLUGIN -->
+    <string name="plugin_wemo_enable">Enable WemoSwitch</string>
+    <string name="plugin_wemo_state">Current state:</string>
+    <string name="plugin_wemo_ip">WemoSwitch IP:</string>
 
     <!-- NAVBARTEMP PLUGIN -->
     <string name="plugin_navbartemp_temperature">System SoC temperature</string>
